# mmdf

./: .cvsignore  ChangeLog  Changes  Configure  Makefile  Makefile.in  README  README.Changes  README.devel  README.install  TODO  VERSION  Version  WhereAreTheDefines  config.guess  configure  configure.ac  configure.in  install.sh  local-config.sh  sh-configure
autoconf/: Makefile  acconfig.h  acgeneral.m4  aclocal.m4  acmmdf.m4  acsite.m4  autoconf.m4f  autoheader.m4f
conf/: cleanup  sitesetup
conf/4.3vax/: chan.c  conf.c  config.h  msgtailor.c
conf/bbn/: conf.c  conf.h  conf_dial.c  config.h  d_lock.h  msgtailor.c
conf/common/: .cvsignore  Makefile.com.in
conf/csnet-relay/: chan.c  chans.init  conf.c  conf.h  conf_dial.c  config.h  msgtailor.c  s_tailor.c
conf/hppa1.0/: conf.c  conf.h  conf_dial.c  config.h  msgtailor.c
conf/i386/: Makefile.com  Makefile.lib  Makefile.src  conf.c  conf.h  conf_dial.c  config.h  d_lock.h
conf/i386-unknown-freebsd3.0/: conf.c  conf_dial.c  config.h  d_lock.h  msgtailor.c  s_tailor.c
conf/linux2.2-glibc2.1-fhs2.0/: README  conf.c  conf.h  conf_dial.c  config.h  configsmoved  d_lock.h  msgtailor.c  s_tailor.c
conf/m68k-hp-hpux8.00/: conf.c  conf.h  config.h  msgtailor.c
conf/okstate/: conf.c  conf.h  conf_dial.c  config.h  d_lock.h  msgtailor.c  s_tailor.c
conf/sample/: chan.c  conf.c  conf.h  conf_dial.c  config.h  msgtailor.c
conf/sites/: default.config  galadriel.config  sample.config  sun.config
conf/sparc-sun-solaris2.4/: conf.c  conf.h  conf_dial.c  config.h  d_lock.h  s_tailor.c
conf/sparc-sun-solaris2.5.1/: conf.c  conf_dial.c  config.h  d_lock.h  msgtailor.c
conf/test/: conf.c  conf.h  conf_dial.c  config.h  msgtailor.c
conf/uclvax2/: chan.c  conf.c  conf.h  conf_dial.c  config.h  d_lock.h  s_tailor.h
conf/vgr/: conf.c  conf.h  conf_dial.c  config.h  msgtailor.c  s_tailor.c
conf/vu44/: conf.c  conf.h  conf_dial.c  config.h  msgtailor.c
debian/: conffiles  control  copyright  cron.d.ex  dirs  init.d  menu.ex  mmdftailor  postinst  postrm.ex  preinst  prerm  rules  watch.ex
debian/table/: aliases  chan.localhst  chan.smarthst  chan.smtp  domains
doc/: FAQ  README  addressing  auth.guide  authorization  dbmdatabase  table.sample.k  uk.overview
doc/administrators/: Makefile  building  overview  runtime  tables  title  tuning
doc/review/: p2  p6
h/: .cvsignore  adr_queue.h  amp.h  ap.h  ap_lex.h  ap_norm.h  bboards.h  ch.h  chan.h  chdbm.h  cmd.h  cnvtdate.h  config.h.bot  config.h.in  config.h.top  d_clogcodes.h  d_proto.h  d_returns.h  d_script.h  d_structs.h  d_syscodes.h  defs.h  dm.h  funcs.h  gettys.h  hdr.h  jnt.h  ll_log.h  ml_send.h  mm_io.h  mmdf.h  msg.h  nexec.h  ns.h  ph.h  phs.h  smtp.h  systypes.h  tb_check.h  util.h
lib/: .cvsignore  Makefile.in  libfix  libfix.linux
lib/addr/: Makefile.real  adrparse.c  ap_1adr.c  ap_dmflip.c  ap_lex.c  ap_lxtable.c  ap_normali.c  ap_p2s.c  ap_s2p.c  ap_s2tree.c  ap_t2parts.c  ap_t2s.c  ap_util.c  fullparse.c  ghost.c  norm.c  parse.c  td.c
lib/dial/: Makefile.real  d_assign.c  d_checksum.c  d_clog.c  d_coding.c  d_connect.c  d_control.c  d_data.c  d_dglobals.c  d_dial2.c  d_escape.c  d_getnbuff.c  d_init.c  d_io.c  d_lock.c  d_log.c  d_master.c  d_numbers.c  d_packet.c  d_parse.c  d_path.c  d_pglobals.c  d_port.c  d_pstty.c  d_quit.c  d_rcvdata.c  d_script.c  d_script2.c  d_setbuff.c  d_slave.c  d_sndstream.c  d_tai.c  d_tscript.c  d_utils.c  mktran.c  test.c
lib/mmdf/: .cvsignore  Makefile.real  alias.c  aliasfetch.c  amp_hdr.c  cache.c  ch_llinit.c  ch_struct.c  err_abrt.c  fnput.c  getmailid.c  getpwmid.c  hd_format.c  interrupt.c  logptr.c  ml_send.c  mm_io.c  mm_rdmail.c  mm_tai.c  mm_wtmail.c  mmdf_fdinit.c  mmdf_init.c  mmdf_vtinit.c  mq_rdmail.c  msg_test.c  phs_note.c  post_tai.c  qu_fakrply.c  qu_io.c  qu_rdmail.c  rp_valstr.c  rtn_proc.c  uip_tai.c
lib/popt/: Makefile.in  configure  mkinstalldirs
lib/table/: Makefile.real  ch_tbdbm.c  ch_tbseq.c  dm_struct.c  dm_table.c  table_test.c  tb_check.c  tb_io.c  tb_ldap.c  tb_nis.c  tb_ns.4.2.c  tb_ns.c  tb_ns.fake.c  tb_regexp.c  tb_struct.c  tb_test.c
lib/util/: Makefile.real  arg2str.c  blt.c  chrcnv.c  cmdbsrch.c  cmdsrch.c  cnvtbytestr.c  cnvtdate.c  compress.c  creatdir.c  cstr2arg.c  endstr.c  equal.c  equwrd.c  expand.c  fs.c  gcread.c  getfpath.c  getgroup.c  getllog.bsd.c  getllog.c  getllog.fak.c  getllog.v7.c  gettys.c  getutmp.c  getwho.c  ggrlnam.c  gpwlnam.c  gwdir.2.9.c  gwdir.4.2.c  gwdir.c  initstr.c  lexequ.c  lexrel.c  lk_lock.4.2.c  lk_lock.5.2.c  lk_lock.c  lk_lock.rand.c  ll_err.c  ll_log.c  (+21 more)
libndir/: Makefile  Read_Me  closedir.c  dir.h  directory.3  opendir.c  readdir.c  seekdir.c  telldir.c  test.c
libz/: Makefile.real  Original.head  README.MMDF  asctime.c  gen  zdump.c  zic.c
man/: Makefile.in
man/man1/: checkmail.1  emactovi.1  malias.1  mlist.1  msg.1  newmail.1  rcvalert.1  rcvfile.1  rcvprint.1  rcvtrip.1  resend.1  send.1  snd.1  v6mail.1
man/man3/: address.3  llog.3  ml_send.3  mmdf.3  phs.3  tables.3  tai.3
man/man5/: files.5  forward.5  logs.5  maildelivery.5  mmdf_auth.5  mmdf_ldap.5  mmdf_rbl.5  mmdf_regexp.5  mmdftailor.5.in  mmdfvirtual.5.in  queue.5  replies.5  script.5  tables.5
man/man7/: channels.7
man/man8/: blockaddr.8  checkaddr.8  checkque.8  checkup.8  cleanque.8  dbmbuild.8  dbmedit.8  dbmlist.8  deliver.8  ean.8  ean2mmdf.8  jntmail.8  list.8  newssend.8  ni_niftp.8  nictable.8  phone.8  process-uucp.8  recvprog.8  rmail.8  sendmail.8  sendprog.8  setup.8  slave.8  smphone.8  smslave.8  smtp.8  smtpd.8  submit.8  tablelist.8  york-inst.8
rpm/: local-configure.sh  mmdf.init  mmdfII-44dev.spec  mmdftailor
samples/4.3vax/: mmdftailor
samples/bbn/: mmdftailor
samples/csnet-relay/: mmdftailor
samples/dial_scripts/: Script  script1  script2  script3  script4  standard
samples/okstate/: README  mmdftailor
samples/simple/: mmdftailor
samples/vgr/: etc.nightly  etc.rc.local  mmdftailor  usr.lib.cronta
src/: Makefile.in  lnbboards
src/bboards/: lock.c  (+6 more)
testmmdf/: mmdftailor
uip/: Makefile  Makefile.in
(+391 files in other folders)
